# anonypii

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  hatch_build.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
examples/: basic_masking.py  custom_detector.py  custom_entity_config.py  dataframe_pipeline.py  model_usage.py  reversible_anonymization.py
src/anonypii/: __init__.py
src/anonypii/cli/: __init__.py  main.py
src/anonypii/config/: __init__.py  entities.yaml  loader.py
src/anonypii/core/: __init__.py  anonymizer.py  deanonymizer.py  entities.py  exceptions.py  result.py
src/anonypii/detectors/: __init__.py  base.py  model.py  regex.py
src/anonypii/io/: __init__.py  dataframe.py  json.py  text.py
src/anonypii/masking/: __init__.py  strategies.py  token_generator.py
src/anonypii/models/: __init__.py  downloader.py  registry.py
src/anonypii/vault/: __init__.py  base.py  json_file.py  memory.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py  test_model_detector.py
tests/unit/: test_anonymizer.py  test_config_loader.py  test_deanonymizer.py  test_entities.py  test_io.py  test_masking_strategies.py  test_regex_detector.py  test_result.py  test_vault_json.py  test_vault_memory.py
