[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "anonypii"
version = "0.1.0"
description = "Production-grade PII detection, masking, and reversible anonymization library backed by fine-tuned DeBERTa models."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Pritesh Jha", email = "priteshjha2711@gmail.com" }]
keywords = ["pii", "anonymization", "nlp", "named-entity-recognition", "privacy", "gdpr", "deberta"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "typing-extensions>=4.0; python_version<'3.11'",
]

[project.optional-dependencies]
model = [
    "torch>=2.0",
    "transformers>=4.30",
    "huggingface-hub>=0.20",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "accelerate>=0.20",
    "numpy>=1.24.0",
]
pandas = [
    "pandas>=2.0",
]
models = [
    "anonypii[model]",
]
all = [
    "anonypii[model]",
    "anonypii[pandas]",
]
dev-core = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "types-pyyaml>=6.0",
    "pyyaml>=6.0",
]
dev = [
    "anonypii[dev-core]",
    "pandas>=2.0",
    "torch>=2.0",
    "transformers>=4.30",
    "huggingface-hub>=0.20",
    "sentencepiece>=0.1.99",
    "accelerate>=0.20",
    "numpy>=1.24.0",
]
[project.scripts]
anonypii = "anonypii.cli.main:main"

[project.urls]
Homepage = "https://github.com/pritesh-2711/anonypii"
Repository = "https://github.com/pritesh-2711/anonypii"
"Bug Tracker" = "https://github.com/pritesh-2711/anonypii/issues"
Documentation = "https://github.com/pritesh-2711/anonypii/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/anonypii"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "requires_model: marks tests that need a downloaded model (deselect with -m 'not requires_model')",
    "integration: marks integration tests",
    "unit: marks unit tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.isort]
known-first-party = ["anonypii"]

[tool.coverage.run]
source = ["src/anonypii"]
omit = ["*/cli/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
